Update relationship type to 'belongs_to'
Changed multiple instances of 'RELATIONSHIP_OF' to 'RELATIONSHIP_BELONGS_TO' across several panels and components. This ensures consistency and may reflect a more accurate logical relationship in the data model.

Refactor entity relationship methods for clarity

Updated methods to use 'findReferencingNodes' instead of 'findAll' in SearchRepositoryPanel, SearchGroupPanel, and SearchPersonPanel. This change improves the accuracy of relationship retrieval logic and enhances code readability. Additionally, fixed relationship insert code in SearchGroupPanel for consistency.